# xwt

./: .git-blame-ignore-revs  .gitignore  Caddyfile  Cargo.toml  README.md  advrunner.toml  deny.toml  flake.nix  rust-toolchain.toml  taplo.toml  typos.toml
.cargo/: config.toml
crates/web-sys-async-io/: Cargo.toml
crates/web-sys-async-io/src/: lib.rs  reader.rs  sys.rs  writer.rs
crates/web-sys-stream-utils/: Cargo.toml
crates/web-sys-stream-utils/src/: lib.rs
crates/web-webtransport-sys/: Cargo.toml  README.md
crates/web-webtransport-sys/src/: lib.rs
crates/web-wt/: Cargo.toml
crates/web-wt-sys/: Cargo.toml
crates/web-wt-sys/src/: lib.rs  macros.rs
crates/web-wt-sys/src/streams/: mod.rs  readable_stream_read_result.rs
crates/web-wt-sys/src/webtransport/: mod.rs  web_transport.rs  web_transport_bidirectional_stream.rs  web_transport_close_info.rs  web_transport_congestion_control.rs  web_transport_connection_stats.rs  web_transport_datagram_duplex_stream.rs  web_transport_datagram_stats.rs  web_transport_error.rs  web_transport_error_options.rs  web_transport_error_source.rs  web_transport_hash.rs  web_transport_options.rs  web_transport_receive_stream.rs  web_transport_receive_stream_stats.rs  web_transport_reliability_mode.rs  web_transport_send_group.rs  web_transport_send_stream.rs  web_transport_send_stream_options.rs  web_transport_send_stream_stats.rs  web_transport_writer.rs
crates/web-wt-sys/tests/: webtransport.rs
crates/web-wt/src/: lib.rs
crates/xwebtransport/: Cargo.toml  build.rs
crates/xwebtransport-core/: Cargo.toml
crates/xwebtransport-core/src/: datagram.rs  error.rs  lib.rs  trait_utils.rs  traits.rs
crates/xwebtransport-core/src/utils/: dummy.rs
crates/xwebtransport-error/: Cargo.toml
crates/xwebtransport-error/src/: lib.rs
crates/xwebtransport-error/src/impls/: debug.rs  display.rs  error.rs
crates/xwebtransport-tests/: Cargo.toml
crates/xwebtransport-tests-native/: Cargo.toml
crates/xwebtransport-tests-native/tests/: wtransport.rs
crates/xwebtransport-tests/src/: lib.rs  tests.rs  utils.rs
crates/xwebtransport-tests/src/tests/: read_small_buf.rs
crates/xwebtransport-web-sys/: Cargo.toml
crates/xwebtransport-web-sys/src/: lib.rs  stream_utils.rs
crates/xwebtransport-web-sys/tests/: test.rs
crates/xwebtransport-webtransport-quinn/: Cargo.toml
crates/xwebtransport-webtransport-quinn/src/: error.rs  lib.rs  types.rs
crates/xwebtransport-webtransport-quinn/tests/: test.rs
crates/xwebtransport-wtransport/: Cargo.toml
crates/xwebtransport-wtransport/src/: lib.rs  types.rs
crates/xwebtransport-wtransport/tests/: test.rs
crates/xwebtransport/src/: lib.rs  trait_utils.rs  traits.rs
crates/xwebtransport/src/impl/: web_sys.rs  wtransport.rs
crates/xwebtransport/src/utils/: dummy.rs
crates/xwt-anchor/: Cargo.toml
crates/xwt-anchor/src/: impls.rs  lib.rs  macros.rs  types.rs
crates/xwt-anchor/src/impls/: core.rs  impl.rs  xwt_core.rs
crates/xwt-anchor/src/impls/core/: as.rs  deref.rs
crates/xwt-anchor/src/impls/impl/: conversions.rs
crates/xwt-anchor/src/impls/xwt_core/: connection_datagrams.rs  datagram.rs  endpoint_accept.rs  endpoint_connect.rs  session_datagrams.rs  session_streams.rs  streams.rs
crates/xwt-cert-fingerprint/: Cargo.toml
crates/xwt-cert-fingerprint/src/: lib.rs
crates/xwt-cert-gen/: Cargo.toml
crates/xwt-cert-gen/src/: lib.rs
crates/xwt-cert-utils/: Cargo.toml
crates/xwt-cert-utils/src/: digest.rs  fingerprint.rs  gen.rs  lib.rs  pem.rs
crates/xwt-core/: Cargo.toml
crates/xwt-core/src/: base.rs  datagram.rs  datagram_utils.rs  io.rs  lib.rs  stream.rs  stream_utils.rs  traits.rs
crates/xwt-core/src/endpoint/: accept.rs  accept_utils.rs  connect.rs  connect_utils.rs  mod.rs
crates/xwt-core/src/session/: base.rs  datagram.rs  datagram_utils.rs  mod.rs  stream.rs  stream_utils.rs
crates/xwt-core/src/utils/: dummy.rs  error.rs  maybe.rs
crates/xwt-dyn/: Cargo.toml
crates/xwt-dyn/src/: base.rs  lib.rs  stream.rs  stream_utils.rs
crates/xwt-dyn/src/endpoint/: accept.rs  connect.rs  mod.rs
crates/xwt-dyn/src/session/: base.rs  datagram.rs  mod.rs  stream.rs
crates/xwt-dyn/src/utils/: traits.rs
crates/xwt-erased/: Cargo.toml
crates/xwt-erased-error/: Cargo.toml
crates/xwt-erased-error/src/: lib.rs
crates/xwt-erased-error/src/impls/: debug.rs  display.rs  error.rs
crates/xwt-erased/src/: error.rs  lib.rs  stream.rs  trace_calls.rs
crates/xwt-erased/src/core_compat/: mod.rs
crates/xwt-erased/src/endpoint/: client.rs  mod.rs  server.rs
crates/xwt-erased/src/session/: datagram.rs  mod.rs  stream.rs
crates/xwt-erased/tests/: native.rs  web.rs
crates/xwt-test-assets/: Cargo.toml  build.rs
crates/xwt-test-assets-build/: Cargo.toml
crates/xwt-test-assets-build/src/: lib.rs
crates/xwt-test-assets/src/: lib.rs
crates/xwt-test-echo-server/: Cargo.toml
crates/xwt-test-echo-server/src/: lib.rs  main.rs
crates/xwt-test-server/: Cargo.toml
crates/xwt-test-server/src/: baton.rs  echo.rs  echo_open_bi.rs  handling.rs  lib.rs  main.rs
crates/xwt-test-server/src/routes/: close.rs  echo_open_bi.rs  mod.rs
crates/xwt-tests/: Cargo.toml
crates/xwt-tests/src/: consts.rs  lib.rs  tests.rs  utils.rs
crates/xwt-tests/src/tests/: accept_bi_stream.rs  chunks.rs  closed_bi_read_stream.rs  closed_bi_send_stream.rs  closed_uni_stream.rs  connection_drop.rs  datagrams.rs  datagrams_read_into.rs  read_resize_buf.rs  read_small_buf.rs  session_drop.rs  streams.rs  tokio_io.rs  tokio_io_read_buf_resize.rs  tokio_io_read_small_buf.rs
crates/xwt-web/: Cargo.toml
crates/xwt-web-sys/: Cargo.toml
crates/xwt-web-sys/src/: error.rs  lib.rs  options.rs  sys.rs
crates/xwt-web-sys/src/sys/: bidirectional_stream.rs  datagram.rs  options.rs  stream.rs  webtransport.rs
crates/xwt-web-sys/tests/: test.rs
crates/xwt-web-utils/: Cargo.toml
crates/xwt-web-utils/src/: cert.rs  lib.rs
crates/xwt-web-utils/tests/: cert.rs
crates/xwt-web/src/: as_error_code.rs  error.rs  error_as_error_code.rs  lib.rs
crates/xwt-web/tests/: test.rs
(+78 files in other folders)
