[workspace]
members = ["crates/*", "examples/*/*"]
resolver = "2"

[patch.crates-io]
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen", branch = "main" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen", branch = "main" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", branch = "main" }
