[package]
name = "web-sys-async-io"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"
tokio = { version = "1", default-features = false, features = [] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["ReadableStreamDefaultReader", "WritableStreamDefaultWriter"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
