[package]
name = "web-sys-async-io"
version = "0.2.4"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
An async-IO implementation read/write stream in the browser, using the web-sys
types.
"""
repository = "https://github.com/MOZGIII/xwt"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=web_sys_unstable_apis"]

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"
tokio = { version = "1", default-features = false, features = [] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["ReadableStreamDefaultReader", "WritableStreamDefaultWriter", "ReadableStreamByobReader"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
