[package]
name = "web-webtransport-sys"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
The low-level rust bindings for the WebTransport Web APIs.
"""
repository = "https://github.com/MOZGIII/xwt"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
js-sys = { version = "0.3", default-features = false }
wasm-bindgen = { version = "0.2.92", default-features = false }
