[package]
name = "xwebtransport-tests"
version = "0.1.0"
edition = "2021"
description = """
Common test suite for xwebtransport.
Intended for reuse to provide the same coverage in all the execution
environments.
"""

[dependencies]
xwebtransport-core = { path = "../xwebtransport-core", default-features = false }
xwebtransport-error = { path = "../xwebtransport-error", default-features = false }

thiserror = "1"
tokio = { version = "1", default-features = false, features = ["io-util"] }
