[package]
name = "xwebtransport-wtransport"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
A common WebTransport interface for browser and native.
Write once, run anywhere. Originally intended for use with bevy.
"""

[target.'cfg(not(target_family = "wasm"))'.dependencies]
xwebtransport-core = { path = "../xwebtransport-core" }

wtransport = { version = "0.1.3" }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
xwebtransport-tests = { path = "../xwebtransport-tests" }

anyhow = "1"
tokio = "1"
