[package]
name = "xwebtransport"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
A common WebTransport interface for browser and native.
Write once, run anywhere. Originally intended for use with bevy.
"""
repository = "https://github.com/MOZGIII/xwebtransport"

[target.'cfg(target_family = "wasm")'.dependencies]
xwebtransport-web-sys = { path = "../xwebtransport-web-sys" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
xwebtransport-wtransport = { path = "../xwebtransport-wtransport" }
