[package]
name = "xwt-cert-utils"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
Useful utils for working with certificates, provided by and for xwt.
Not directly required to use xwt, but can be helpful. Also usable without xwt.
Inteded to work with both wasm and native.
"""
repository = "https://github.com/MOZGIII/xwt"

[dependencies]
base64 = { version = "0.22", optional = true }
pem = "3"
rcgen = { version = "0.12", optional = true }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"], optional = true }
time = "0.3"

[features]
default = ["rcgen", "digest-all", "fingerprint-all"]

digest-all = ["digest-sha256"]
digest-sha256 = ["dep:ring"]

fingerprint-all = ["fingerprint-rfc7469", "fingerprint-sha256"]
fingerprint-rfc7469 = ["digest-sha256", "dep:base64"]
fingerprint-sha256 = ["digest-sha256"]
