[package]
name = "xwt-core"
version = "0.4.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
A common WebTransport interface for browser and native.
Write once, run anywhere.
"""
repository = "https://github.com/MOZGIII/xwt"

[dependencies]

[features]
default = ["std"]

alloc = []
error-in-core = []
std = ["alloc"]
