[package]
name = "xwt-core"
version = "0.8.0"
edition = "2021"
resolver = "2"
rust-version = "1.81"
license = "MIT"
description = """
A common WebTransport interface for browser and native.
Write once, run anywhere.
"""
repository = "https://github.com/MOZGIII/xwt"

[dependencies]

[features]
default = ["std"]

alloc = []
std = ["alloc"]
