[package]
name = "xwt-dyn"
version = "0.3.0"
edition = "2021"
resolver = "2"
rust-version = "1.81"
license = "MIT"
description = """
A suite of dyn-safe companion traits for xwt-core.
"""
repository = "https://github.com/MOZGIII/xwt"

[dependencies]
xwt-core = { version = "0.9", path = "../xwt-core", default-features = false }

dyn_safe = "0.1"

[features]
default = ["std"]

alloc = ["xwt-core/alloc"]
std = ["alloc"]
