[package]
name = "xwt-erased"
version = "0.4.0"
edition = "2021"
resolver = "2"
rust-version = "1.81"
license = "MIT"
description = """
Type-erased wrappers for the `xwt-dyn` traits.
"""
repository = "https://github.com/MOZGIII/xwt"

[dependencies]
xwt-core = { version = "0.9", path = "../xwt-core", default-features = false, optional = true }
xwt-dyn = { version = "0.3", path = "../xwt-dyn", default-features = false }

static_assertions = { version = "1", optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
tracing = "0.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
xwt-web = { version = "0.19", path = "../xwt-web", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
xwt-wtransport = { version = "0.16", path = "../xwt-wtransport", default-features = false }

wtransport = { version = "0.6", default-features = false }

[features]
default = ["core-compat"]

core-compat = ["dep:xwt-core", "dep:static_assertions"]
trace-calls = ["dep:tracing"]
