[package]
name = "xwt-test-assets-build"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
A static assets generation utility.
"""
repository = "https://github.com/MOZGIII/xwt"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
xwt-cert-gen = { version = "0.1", path = "../xwt-cert-gen" }

p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
], optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
