[package]
name = "xwt-test-server"
version = "0.4.2"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
The server to use for xwt testing.
Not intended to be wasm-compatible.
"""
repository = "https://github.com/MOZGIII/xwt"
autobins = false

[[bin]]
name = "xwt-test-server"
path = "src/main.rs"
required-features = ["bin"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
xwt-cert-fingerprint = { version = "0.1", path = "../xwt-cert-fingerprint" }
xwt-test-assets = { version = "0.1.2", path = "../xwt-test-assets" }

color-eyre = { version = "0.6", optional = true }
envfury = { version = "0.2", optional = true }
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
typle = "0.10"
wtransport = { version = "0.3.0", default-features = false, features = ["self-signed", "quinn"] }

[features]
bin = ["dep:color-eyre", "dep:envfury", "dep:tracing-subscriber", "tokio/macros"]
default = ["bin"]
