[package]
name = "xwt-web-sys"
version = "0.6.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
An implementation of the xwt that runs in the browser.
Powered by wasm-bindgen and web-sys.
"""
repository = "https://github.com/MOZGIII/xwt"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=web_sys_unstable_apis"]

[target.'cfg(target_family = "wasm")'.dependencies]
xwt-core = { version = "0.2.2", path = "../xwt-core", default-features = false }
web-sys-async-io = { version = "0.3", path = "../web-sys-async-io" }
web-sys-stream-utils = { version = "0.2", path = "../web-sys-stream-utils" }

tokio = { version = "1", default-features = false, features = ["sync"] }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["ReadableStream", "WritableStream"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
xwt-tests = { version = "0.4.2", path = "../xwt-tests" }
xwt-test-assets = { version = "0.1", path = "../xwt-test-assets" }
xwt-web-utils = { version = "0.1", path = "../xwt-web-utils" }
xwt-cert-utils = { version = "0.1", path = "../xwt-cert-utils" }

tracing-wasm = "0.2"
wasm-bindgen-test = "0.3"
tracing = "0.1"
web-sys = { version = "0.3", features = ["console"] }
