[package]
name = "xwt-web-utils"
version = "0.1.1"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
Useful utils for running in the browser, provided by and for xwt.
Not directly required to use xwt, but can help with setting up the endpoint
and etc.
"""
repository = "https://github.com/MOZGIII/xwt"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebTransportOptions", "WebTransportHash"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
