[package]
name = "xwt-web"
version = "0.17.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = """
An implementation of the xwt that runs in the browser.
Powered by wasm-bindgen and web-sys.
"""
repository = "https://github.com/MOZGIII/xwt"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys-async-io = { version = "0.5", path = "../web-sys-async-io" }
web-sys-stream-utils = { version = "0.2", path = "../web-sys-stream-utils" }
web-wt-sys = { version = "0.2", path = "../web-wt-sys", default-features = false }
xwt-core = { version = "0.7", path = "../xwt-core", default-features = false }

js-sys = "0.3"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["ReadableStream", "WritableStream", "DomException"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
xwt-cert-fingerprint = { version = "0.1", path = "../xwt-cert-fingerprint", default-features = false }
xwt-test-assets = { version = "0.2", path = "../xwt-test-assets" }
xwt-tests = { version = "0.10", path = "../xwt-tests" }

static_assertions = "1"
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }
